--- a/src/pages/views-showcase.css
+++ b/src/pages/views-showcase.css
@@ -51,7 +51,7 @@
 
 .page-views-showcase > .content {
     flex: 1;
-    padding: 20px 24px;
+    padding: 0 24px 20px;
     overflow: hidden;
     overflow-y: scroll;
 }
