--- a/src/views/source.css
+++ b/src/views/source.css
@@ -67,11 +67,12 @@
 .view-source .token.comment,
 .view-source .token.prolog,
 .view-source .token.doctype,
-.view-source .token.cdata {
-	color: var(--discovery-fmt-comment-color);;
+.view-source .token.cdata,
+.view-source .token.quote {
+	color: var(--discovery-fmt-comment-color);
 }
 .view-source .token.punctuation {
-	color: #999;
+	color: var(--discovery-fmt-punctuation);
 }
 .view-source .token.namespace {
 	opacity: .7;
@@ -96,24 +97,9 @@
 .view-source .token.tag,
 .view-source .token.constant,
 .view-source .token.symbol,
-.view-source .token.deleted {
+.view-source .token.deleted,
+.view-source .token.header {
 	color: var(--discovery-fmt-property-color);
-}
-/* .view-source .token.operator, */
-.view-source .token.entity,
-.view-source .token.url {
-	color: #9a6e3a;
-}
-.view-source .token.atrule,
-.view-source .token.keyword {
-	color: var(--discovery-fmt-keyword-color);
-}
-.view-source .token.function,
-.view-source .token.attribute,
-.view-source .token.attr-name,
-.view-source .token.qualifier,
-.view-source .token.class-name {
-	color: #DD4A68;
 }
 .view-source .token.regex,
 .view-source .token.important,
@@ -122,6 +108,24 @@
 .view-source .token.variable-2 {
 	color: var(--discovery-fmt-variable-color);
 }
+.view-source .token.keyword,
+.view-source .token.atrule,
+.view-source .token.link,
+.view-source .token.url {
+	color: var(--discovery-fmt-keyword-color);
+}
+.view-source .token.qualifier,
+.view-source .token.function,
+.view-source .token.attribute,
+.view-source .token.attr-name,
+.view-source .token.class-name {
+	color: var(--discovery-fmt-qualifier);
+}
+/* .view-source .token.operator, */
+.view-source .token.entity {
+	color: var(--discovery-fmt-entity);
+}
+.view-source .token.image,
 .view-source .token.type {
     color: var(--discovery-fmt-type-color);
 }
