--- a/src/widget/style/base.css
+++ b/src/widget/style/base.css
@@ -48,6 +48,9 @@
     --discovery-fmt-string-color: #690;
     --discovery-fmt-string-highlight-color: rgba(35, 165, 25, 0.1);
     --discovery-fmt-comment-color: #75787b;
+    --discovery-fmt-qualifier: #dd4a68;
+    --discovery-fmt-entity: #9a6e3a;
+    --discovery-fmt-punctuation: #999;
 
     --discovery-page-padding-top: 35px;
     --discovery-page-padding-right: 40px;
