--- a/src/views/struct/style/index.css
+++ b/src/views/struct/style/index.css
@@ -10,7 +10,7 @@
     font-family: var(--discovery-monospace-font-family);
     font-size: 11px;
     line-height: 18px;
-    background: rgba(205, 205, 205, 0.1);
+    background-color: rgba(205, 205, 205, 0.1);
     color: var(--discovery-fmt-color);
     white-space: nowrap;
 }
@@ -32,14 +32,11 @@
 .view-struct.struct-expanded-value,
 .view-struct .struct-expanded-value {
     background-image: linear-gradient(to bottom, rgba(187, 187, 187, 0.15), rgba(187, 187, 187, 0.15));
-    background-size: 1px calc(100% - 38px);
-    background-position: 4.85ex 20px;
+    background-size: 1px calc(100% - 36px);
+    background-position: 3px 18px;
     background-repeat: no-repeat;
     background-attachment: local;
-}
-.view-struct.struct-expanded-value {
-    background-size: 1px calc(100% - 54px);
-    background-position: 11px 28px;
+    background-origin: content-box;
 }
 
 .discovery-view-popup.view-struct-actions-popup .error {
