Add a glyph for assetions

--- a/src/views/editors-hint.css
+++ b/src/views/editors-hint.css
@@ -81,3 +81,7 @@
 .discovery-view-editor-hint.type-method::before {
     content: 'M';
 }
+.discovery-view-editor-hint.type-assertion::before {
+    content: 'A';
+}
+
