--- a/src/widget/style/base.css
+++ b/src/widget/style/base.css
@@ -23,7 +23,7 @@
     transition-timing-function: ease-in;
 
     --discovery-font-family: Tahoma, Verdana, Arial, sans-serif;
-    --discovery-monospace-font-family: Menlo, Monaco, Consolas, monospace;
+    --discovery-monospace-font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
     --discovery-ui-font-family: system-ui, Arial, sans-serif;
     --discovery-background-color: white;
     --discovery-color: black;
