Tweak style of comma-list

--- a/src/views/layout/list-item.css
+++ b/src/views/layout/list-item.css
@@ -4,6 +4,10 @@
     list-style: none;
 }
 
+.view-comma-list > .view-list-item > * {
+    margin-right: 0;
+}
+
 .view-comma-list > .view-list-item::after {
     content: ', ';
     white-space: pre;
