--- a/src/views/editor/editors.css
+++ b/src/views/editor/editors.css
@@ -2,26 +2,38 @@
 @import url('codemirror/theme/neo.css');
 @import url('./editors-hint.css');
 
+.discovery-editor {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+    border: 1px solid rgba(124, 124, 124, 0.65);
+    border-radius: 3px;
+}
+.discovery-editor:focus-within {
+    border-color: rgba(0, 141, 255, 0.75);
+    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
+}
+.discovery-editor .discovery-editor__input-panel {
+    order: 0;
+}
+.discovery-editor .discovery-editor__output-panel {
+    order: 2;
+}
+
 .discovery-editor .CodeMirror {
+    order: 1;
     height: auto;
     overflow-y: hidden !important;
     padding: 2px 8px;
-    margin-bottom: 5px;
     font-family: var(--discovery-monospace-font-family);
     font-size: 12px;
     background-color: var(--discovery-input-bg-color);
+    /* box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2); */
     transition: .25s ease-in;
     transition-property: background-color, color;
-    border: 1px solid rgba(124, 124, 124, 0.65);
-    border-radius: 3px;
-    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
 }
 .discovery-root-darkmode .discovery-editor .CodeMirror {
     color: #d1c7c3;
-}
-.discovery-editor .CodeMirror-focused {
-    border-color: rgba(0, 141, 255, 0.75);
-    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
 }
 .discovery-editor .CodeMirror-scroll {
     min-height: 6.5em;
