Fix suggestion popup positioning in query editor

--- a/src/views/editor/editors-hint.css
+++ b/src/views/editor/editors-hint.css
@@ -1,6 +1,7 @@
 .discovery-view-editor-hints-popup {
     position: absolute;
     z-index: 1000;
+    box-sizing: border-box;
     overflow: hidden;
     overflow-y: auto;
     list-style: none;
