--- a/src/views/editor/editors.css
+++ b/src/views/editor/editors.css
@@ -8,6 +8,7 @@
     margin-bottom: 5px;
     border: 1px solid rgba(124, 124, 124, 0.65);
     border-radius: 3px;
+    background-color: var(--discovery-background-color);
 }
 .discovery-editor:focus-within {
     border-color: rgba(0, 141, 255, 0.75);
