--- a/src/views/struct/style/annotation.css
+++ b/src/views/struct/style/annotation.css
@@ -58,6 +58,7 @@
 
 .view-struct .value-annotation.style-badge {
     display: inline-block;
+    margin-top: -2px;
     vertical-align: middle;
     padding: 1px 4px 1px;
     text-decoration: none;
