--- a/src/views/layout/popup.css
+++ b/src/views/layout/popup.css
@@ -36,12 +36,12 @@
     font-size: 10px;
     text-align: center;
 }
-.discovery-view-popup:not(.pinned)[data-v-to="top"]::before {
+.discovery-view-popup:not(.pinned)[data-pin-mode="trigger-click"][data-v-to="top"]::before {
     position: absolute;
     visibility: visible;
     bottom: 0;
 }
-.discovery-view-popup:not(.pinned)[data-v-to="bottom"]::after {
+.discovery-view-popup:not(.pinned)[data-pin-mode="trigger-click"][data-v-to="bottom"]::after {
     position: absolute;
     visibility: visible;
     top: 0;
