--- a/src/views/struct/style/annotation.css
+++ b/src/views/struct/style/annotation.css
@@ -1,12 +1,15 @@
 .view-struct .value-annotation {
     display: inline-block;
-    color: #aaa;
+    vertical-align: middle;
+    padding: 1px 4px;
+    margin-top: -2px;
     font-size: 10px;
     line-height: 14px;
     border-radius: 3px;
+    color: #aaa;
 }
 .view-struct .value-annotation + .value-annotation {
-    margin-left: 4px;
+    margin-left: 2px;
 }
 .view-struct .value-annotation[href]:focus-visible {
     outline: none;
@@ -28,7 +31,7 @@
 }
 
 .view-struct .value-annotation.before + .value {
-    margin-left: 4px;
+    margin-left: 2px;
 }
 .view-struct .value-annotations {
     margin-left: 6px;
@@ -37,11 +40,10 @@
     margin-left: 1.5ex;
 }
 
+.view-struct .value-annotation.style-none,
 .view-struct .value-annotation.style-default {
     --annotation-bg-gradient-from: white;
     --annotation-bg-gradient-to: rgba(255, 255, 255, 0);
-    padding: 1px 4px 0;
-    border-radius: 4px;
 }
 .discovery-root-darkmode .view-struct .value-annotation.style-default {
     --annotation-bg-gradient-from: rgba(33, 33, 33, .5);
@@ -57,15 +59,9 @@
 }
 
 .view-struct .value-annotation.style-badge {
-    display: inline-block;
-    margin-top: -2px;
-    vertical-align: middle;
-    padding: 1px 4px 1px;
     text-decoration: none;
     background: rgba(155, 155, 155, 0.15);
     color: #999;
-    font-size: 10px;
-    line-height: 14px;
     border-radius: 3px;
     user-select: none;
 }
