--- a/src/widget/style/base.css
+++ b/src/widget/style/base.css
@@ -41,7 +41,7 @@
     --discovery-fmt-flag-color: #ff6e13;
     --discovery-fmt-variable-color: #047d65;
     --discovery-fmt-property-color: #bd6476;
-    --discovery-fmt-keyword-color: #07a;
+    --discovery-fmt-keyword-color: #9150c5;
     --discovery-fmt-number-color: #07a;
     --discovery-fmt-atom-color: #07a;
     --discovery-fmt-type-color: #1b965f;
@@ -77,7 +77,7 @@
     --discovery-fmt-flag-color: #ff8030;
     --discovery-fmt-variable-color: #16a78a;
     --discovery-fmt-property-color: #d17a8c;
-    --discovery-fmt-keyword-color: #0f8dc2;
+    --discovery-fmt-keyword-color: #a783c4;
     --discovery-fmt-number-color: #0f8dc2;
     --discovery-fmt-atom-color: #0f8dc2;
     --discovery-fmt-type-color: #48bc88;
